# bubi-prediction

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  databricks-requirements.txt  databricks.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
resources/: bubi_prediction.job.yml  inference.yml  ingestion.yml  monitoring.yml  train.yml  training.yml
scratch/: README.md  data_processing.py  train_models_with_applyInPandas.py  train_models_with_applyInPandas.txt
src/: baseline_model.py  challenger_validation.py  data_processing.py  inference.py  monitoring.py  notebook.ipynb  promotion.py  training.py
src/includes/: data_processing.py  inference.py  models.py  training.py  utilities.py
tests/: conftest.py  test_data_processing.py  test_inference.py  test_training.py
tests/files/: 2024-03-12T10-56-15Z.json  bronze_sample_row.json
