[project]
name = "bubi-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow-skinny==2.21.3",
    "pre-commit>=4.2.0",
    "prophet==1.1.5",
    "pyspark==3.5.4",
    "pytest==8.3.0",
    "scikit-learn==1.4.2",
    "setuptools>=80.9.0",
]
