[project]
name = "bubi-prediction"
version = "0.1.0"
description = "Predict the number of BUBI bikes"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "databricks-sdk==0.49.0",
    "holidays>=0.77",
    "mlflow-skinny==2.22.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pre-commit>=4.2.0",
    "pyspark==4.0.0",
    "pytest==8.3.0",
    "scikit-learn==1.6.1",
    "setuptools>=80.9.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pyspark>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
filterwarnings = "ignore::DeprecationWarning"
